# eins

./: .gitignore  CMakeLists.txt  README.md  README.rst  TODO.rst  einsConfig.h.in
cmake/cmake-modules/: FindPETSc.cmake
cmake/cmakeSys/: FindSLEPc.cmake  commonCompilerFlagsGcc.cmake  mainMacrosAndFunctions.cmake  runtest.cmake
doc/: CMakeLists.txt
doc/latex/: biblio.bib  einsManual.tex
doc/latex/figures/einsDesign/: ooDesign.zargo
include/: eins.h  einsfeti.h  einsksp.h  einsmat.h  einspc.h  einspetsccompat.h  einssnes.h  einssys.h  einstest.h  einsts.h  einsutils.h  einsvec.h
include/private/: einsfetiimpl.h  einskspimpl.h  einsmatimpl.h  einspcimpl.h  einssnesimpl.h  einssubdomain.h  einstsimpl.h  einsvecimpl.h
src/: CMakeLists.txt
src/feti/: einsfeti.c  einsfeti1.c  einsfeti1.h  einsfeti2.c  einsfeti2.h  einsfeti2_geneo.c  einsfetics.c  einsfetidyn.c  einsfetidyn.h  einsfetipj.c  einsfetiscaling.c  einsfetistat.c  einsgeneo.c  einsgeneo.h  einspj1level.c  einspj1level.h  einspj2level.c  einspj2level.h  einspjnone.c  einsrbm.c  einsrbm.h  einssubdomain.c  einssubdomain.h
src/ksp/: einsgmresimpl.h  einsksp.c  einskspfeti.c  einskspfetiimpl.h  einspjcg.c  einspjcgimpl.h  einspjgmres.c
src/mat/: einslgmat.c  einsmatshellunasm.c
src/pc/: einspc.c  einspcdirichlet.c  einspcdirichlet.h  einspclumped.c
src/snes/: einsfetionly.c  einsfetionly.h  einsnlfeti.c  einsnlfeti.h  einssnes.c
src/sys/: eins.c  einshdf5.c  einstest.c  einsutils.c
src/ts/: einsts.c  tsalpha2.c  tsalpha2impl.h
src/vec/: einsvecexchange.c  einsvecunasm.c  einsvecunasm.h
test/: CMakeLists.txt  Oscillator.py  Oscillator2.c  ex7.c  feti1SpectralElements.c  fetiContextCreation.c  fetiContextMatCreation.c  matMatBeamTiming.c  matWithoutError.c  poissonFD.c  poissonFDkspfeti.c  poissonFDkspfetiTimes.c  poissonFDunasmvec.c  snesfetionlyTest.c  testVecUAsm.c  vecUnasmHDF5.c
test/results/: res_ex7.txt  res_feti1SpectralElements1.txt  res_feti1SpectralElements2.txt  res_fetiContextCreation.txt  res_fetiContextMatCreation1.txt  res_fetiContextMatCreation2.txt  res_poissonFD1.txt  res_poissonFDkspfeti1.txt  res_poissonFDkspfeti2.txt  res_testVecUAsm.txt
